[gd_scene load_steps=2 format=3 uid="uid://do5gy047htcsl"]

[ext_resource type="Script" path="res://levels/summary_end_of_day.gd" id="1_v0bgr"]

[node name="summary_end_of_day" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_v0bgr")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 576.0
offset_bottom = 1024.0
color = Color(0.152941, 0.14902, 0.207843, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 42.0
offset_right = 552.0
offset_bottom = 104.0

[node name="Food Bar" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "Food Bar
"

[node name="Water Bar" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "Water Bar"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hygiene Bar" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "Hygiene Bar
"
horizontal_alignment = 2
vertical_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 426.0
offset_right = 559.0
offset_bottom = 922.0

[node name="Eat" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Eat
"
flat = true

[node name="Drink" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Drink"
flat = true

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Continue"
flat = true

[connection signal="pressed" from="VBoxContainer/Eat" to="." method="_on_eat_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Drink" to="." method="_on_drink_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_continue_button_pressed"]
